# umbra-protocol

./: .gitignore  AUDIT_REPORT.md  BUILD_INSTRUCTIONS.md  COMPLETE_SYSTEM_OVERVIEW.md  INCIDENT_RESPONSE.md  LEGAL_DISCLAIMER.md  LEGITIMACY_CHECKLIST.md  LICENSE  PRODUCTION_DEPLOYMENT_CHECKLIST.md  QUICK_REFERENCE.md  RAPID_MAINNET_DEPLOY.sh  README.md  SECURITY.md  SSL_TLS_SETUP.md  TRUSTED_SETUP_VERIFICATION.md  package.json
ceremony/: automated_setup.sh  trusted_setup.md
circuits/: package.json  payment_proof.circom  payment_proof_optimized.circom  verification_key_loader.js
circuits/test/: integration_test.js  test_circuit.js
contracts/: Cargo.toml
contracts/src/: batch_verifier.rs  lib.rs  vkey_placeholder.rs
contracts/tests/: integration_test.rs
deploy/: .env.production.example  deploy.sh  docker-compose.yml
monitoring/: alerts.yml  prometheus.yml
prover/: .env.development  .env.production  Dockerfile  README.md  auth.go  backup.go  cache.go  database.go  go.mod  logger.go  main.go  metrics.go  rate_limiter.go
sdk/: package.json
sdk/src/: client.ts  fallback.ts  index.ts  middleware.ts  proof-generator.ts  types.ts  verifier.ts
server/: .env.example  Dockerfile  package.json
server/src/: client-example.ts  server.ts
testing/: README.md  chaos_test.js  fuzz_test.js  load_test.js  package.json  run_all_tests.js  stress_test.js
website/: index.html  netlify.toml  script.js  styles.css
